--- a/assets/css/portofolio.css
+++ b/assets/css/portofolio.css
@@ -34,6 +34,10 @@
 }
 
 @media (orientation: landscape) {
+	:root{
+		color-scheme: only light;
+	}
+	
 		body {
 		margin: 0px;
 	}
@@ -436,6 +440,9 @@ transform: scale(1.4);
 
 
 @media (orientation: portrait) {
+	:root{
+		color-scheme: only light;
+	}
 
 	body {
 		margin: 0px;
